@@ -44,9 +44,9 @@ namespace SimpleInjector.Lifestyles
             get { throw new NotImplementedException(); }
         }
 
-        protected override Registration CreateRegistrationCore<TService, TImplementation>(Container container)
+        protected override Registration CreateRegistrationCore<TImplementation>(Container container)
         {
-            Lifestyle lifestyle = this.options.SelectLifestyle(typeof(TService), typeof(TImplementation));
+            Lifestyle lifestyle = this.options.SelectLifestyle(typeof(TImplementation));
 
             return lifestyle.CreateRegistration<TService, TImplementation>(container);
         }
