@@ -20,6 +20,12 @@ Version 4.0.0 (v4.0 RTM)
 		-[Core] Registration.BuildTransientDelegate<TService, TImplementation>() signature changed to
 			BuildTransientDelegate<TService, TImplementation>(InstanceProducer). (fixes #320)
 
+		-[Core] IConstructorResolutionBehavior.GetConstructor(Type, Type) signature changed. (fixes #345)
+		-[Core] ILifestyleSelectionBehavior.SelectLifestyle(Type, Type) signature changed. (fixes #345)
+		-[Core] Lifestyle.CreateRegistration<TService, TImplementation>(Container) removed. (fixes #345)
+		-[Core] Lifestyle.CreateRegistration(Type, Type, Container) signature changes. (fixed #345)
+		-[Core] Lifestyle.CreateRegistrationCore<TService, TImplementation>(Container) signature changes. (fixes #345)
+
 	Improvements/Changes:
 		-[Core] Removed all methods that were marked [obsolete(true)] since v3.0. (fixes #305)
 		-[Core] ThreadScopedLifestyle added to core library as replacement of LifetimeScopeLifestyle. (fixes #299)
